--- a/articles.html
+++ b/articles.html
@@ -15,6 +15,11 @@
             color: #6600ea;
         }
 
+        .activ:focus
+        {
+            color: #6600ea;
+        }
+
         h2.article-header
         {
             color: #2f54a4;
@@ -36,7 +41,19 @@
             font-style: italic;
             color: #39395b;
         }
+
+        .show
+        {
+            transition: opacity 400ms;
+        }
+
+        .hide
+        {
+            opacity: 0;
+        }
     </style>
+    <script src="js/common.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body style="font-family: 'Garamond'">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -68,23 +85,104 @@
             </ul>
         </div>
     </nav>
-<section class="container my-5">
-    <h2 class="text-center">Articles</h2>
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <div class="card">
-    <img src="images/ss.png" class="card-img-top p-2">
-    <div class="card-body">
-        <h5 class="card-title">Social Security Versus Private Security</h5>
-        <p class="card-text">A cost-benefit analysis of the public Social Security option versus private options</p>
-        <a href="ss_versus_private.html" class="btn btn-primary">Read More</a>
-        <p class="mt-2 mb-0">October 29th, 2023</p>
-    </div>
-</div>
-        </div>
-    </div>
-</section>
+    <div id="content" style="min-height: 100vh">
+<script>
+    function showArticles(tag = null)
+    {
+        allArticlesE.classList.replace("hide", "show");
+        allArticlesE.replaceChildren();
+        var articleNum = 0;
+        var lastArticleRow = null;
+        for (const articleE of allArticles)
+        {
+            articleE.second.classList.replace("show", "hide");
+            if (tag == null || articleE.first.tags.has(tag))
+            {
+                if (articleNum % 4 == 0)
+                {
+                    lastArticleRow = document.createElement("div");
+                    lastArticleRow.classList.add("row", "mt-3");
+                    allArticlesE.appendChild(lastArticleRow);
+                    articleNum = 0;
+                }
+                setTimeout(() => {
+                    articleE.second.classList.replace("hide", "show");
+                }, 50);
+                lastArticleRow.appendChild(articleE.second);
+                ++articleNum;
+            }
+        }
+    }
 
+    function switchTag(element)
+    {
+        if (!element.classList.contains("activ"))
+        {
+            for (const child of navList.children)
+            {
+                child.classList.remove("activ");
+            }
+
+            element.classList.add("activ");
+            if (element.innerText == 'All')
+            {
+                showArticles();
+            }
+            else
+            {
+                showArticles(element.innerText);
+            }
+        }
+    }
+
+    var articleTags = new Set();
+    for (const article of articles)
+    {
+        for (const tag of article.tags)
+        {
+            articleTags.add(tag);
+        }
+    }
+    articleTags = Array.from(articleTags);
+    articleTags.sort();
+</script>
+<section class="container my-3 mb-5">
+    <h2 class="text-center">Articles</h2>
+    <nav class="nav border-bottom pb-0" id="article_nav">
+        <button class="nav-link ms-3 btn btn-link activ" onclick="switchTag(this)">All</button>
+    </nav>
+    <div id="allArticles"></div>
+</section>
+<script>
+    const allArticlesE = document.getElementById("allArticles");
+    const allArticles = []
+    
+    for (const article of articles.reverse())
+    {
+        const articleColumn = document.createElement("div");
+        articleColumn.classList.add("col-md-3", "show");
+        const articleCard = generate_card(article);
+        articleColumn.appendChild(articleCard);
+        allArticles.push({first: article, second: articleColumn});
+    }
+
+    const navList = document.getElementById("article_nav");
+    for (const tag of articleTags)
+    {
+        const categoryLink = document.createElement("button");
+        categoryLink.classList.add("nav-link", "ms-3", "btn", "btn-link");
+        categoryLink.innerText = tag;
+        categoryLink.onclick = () => { switchTag(categoryLink); };
+
+        navList.appendChild(categoryLink);
+    }
+
+    addEventListener("load", (event) => {
+        showArticles();
+    });
+</script>
+
+    </div>
     <footer class="text-center" style="background: #e8e6e6;">
         <div class="py-2">&copy; 2023 by Collin Moon</div>
     </footer>
