--- a/ss_versus_private.html
+++ b/ss_versus_private.html
@@ -15,6 +15,11 @@
             color: #6600ea;
         }
 
+        .activ:focus
+        {
+            color: #6600ea;
+        }
+
         h2.article-header
         {
             color: #2f54a4;
@@ -36,7 +41,19 @@
             font-style: italic;
             color: #39395b;
         }
+
+        .show
+        {
+            transition: opacity 400ms;
+        }
+
+        .hide
+        {
+            opacity: 0;
+        }
     </style>
+    <script src="js/common.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body style="font-family: 'Garamond'">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -68,6 +85,7 @@
             </ul>
         </div>
     </nav>
+    <div id="content" style="min-height: 100vh">
 <section class="container my-5">
     <h1 class="text-center">Social Security Versus Private Security</h1>
     <div class="mb-5 text-center"><small>October 29th, 2023</small></div>
@@ -1990,6 +2008,7 @@
     </p>
 </section>
 
+    </div>
     <footer class="text-center" style="background: #e8e6e6;">
         <div class="py-2">&copy; 2023 by Collin Moon</div>
     </footer>
