--- a/ss_versus_private.html
+++ b/ss_versus_private.html
@@ -72,6 +72,9 @@
                 <li class="nav-item">
                     <a class="nav-link px-5" href="articles.html">Articles</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link px-5" href="tools.html">Tools</a>
+                </li>
             </ul>
             <ul class="navbar-nav d-none d-md-flex">
                 <li class="border-top border-bottom border-black col-5"></li>
@@ -81,11 +84,14 @@
                 <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
                     <a class="nav-link  text-center" href="articles.html">Articles</a>
                 </li>
+                <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
+                    <a class="nav-link  text-center" href="tools.html">Tools</a>
+                </li>
                 <li class="border-top border-bottom border-black col-5"></li>
             </ul>
         </div>
     </nav>
-    <div id="content" style="min-height: 100vh">
+    <div id="content">
 <section class="container my-5">
     <h1 class="text-center">Social Security Versus Private Security</h1>
     <div class="mb-5 text-center"><small>October 29th, 2023</small></div>
