--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code, Capitalism, and Cooperation</title>
+    <title>Code, Capitalism, and Cooperation | Articles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         .nav-link
@@ -72,6 +72,9 @@
                 <li class="nav-item">
                     <a class="nav-link px-5" href="articles.html">Articles</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link px-5" href="tools.html">Tools</a>
+                </li>
             </ul>
             <ul class="navbar-nav d-none d-md-flex">
                 <li class="border-top border-bottom border-black col-5"></li>
@@ -81,11 +84,14 @@
                 <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
                     <a class="nav-link activ text-center" href="articles.html">Articles</a>
                 </li>
+                <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
+                    <a class="nav-link  text-center" href="tools.html">Tools</a>
+                </li>
                 <li class="border-top border-bottom border-black col-5"></li>
             </ul>
         </div>
     </nav>
-    <div id="content" style="min-height: 100vh">
+    <div id="content">
 <script>
     function showArticles(tag = null)
     {
