Compound Interest Calculator

--- a/index.html
+++ b/index.html
@@ -51,11 +51,20 @@
         {
             opacity: 0;
         }
+
+        .footer
+        {
+            background: #e8e6e6;
+        }
+
+        [hidden] {
+            display: none !important;
+        }
     </style>
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>
 </head>
-<body style="font-family: 'Garamond'">
+<body class="d-flex flex-column vh-100" style="font-family: 'Garamond'">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <header class="text-center py-5">
         <h2 style="font-size: 48px; font-weight: bold; text-shadow: 1px 1px #000000;"><code class="text-black"><span style="color: #0d6efd">{</span><span style="color: #6f42c1">Code</span>, <span style="color: #007B5E">Capitalism</span>, and <span style="color: #FFD700">Cooperation</span><span style="color: #0d6efd">}</span></code></h2>
@@ -129,7 +138,7 @@
 </script>
 
     </div>
-    <footer class="text-center" style="background: #e8e6e6;">
+    <footer class="text-center footer mt-auto">
         <div class="py-2">&copy; 2023 by Collin Moon</div>
     </footer>
 
