--- a/compound_interest_calculator.html
+++ b/compound_interest_calculator.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compound Interest Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         .nav-link
         {
@@ -60,12 +61,16 @@
         [hidden] {
             display: none !important;
         }
+        
+        input:invalid {
+            border:1px solid red;
+        }
     </style>
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body class="d-flex flex-column vh-100" style="font-family: 'Garamond'">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <header class="text-center py-5">
         <h2 style="font-size: 48px; font-weight: bold; text-shadow: 1px 1px #000000;"><code class="text-black"><span style="color: #0d6efd">{</span><span style="color: #6f42c1">Code</span>, <span style="color: #007B5E">Capitalism</span>, and <span style="color: #FFD700">Cooperation</span><span style="color: #0d6efd">}</span></code></h2>
     </header>
@@ -258,8 +263,8 @@
                             <div class="d-flex my-3">
                                 <div class="flex-row">
                                     <label for="deductions" class="form-label fw-bold">Deductions</label>
-                                    <input id="deductions" type="number" step="0.01" class="form-control" min="0" value="27700">
-                                    <div>Your tax deductions. Standard deduction is $13,850 for single, and $27,700 for joint filers.</div>
+                                    <input id="deductions" type="number" step="0.01" class="form-control" min="0" value="29200">
+                                    <div>Your tax deductions. Standard deduction is $14,600 for single, and $29,200 for joint filers.</div>
                                 </div>
                             </div>
                             <p class="fw-bold mb-0">Tax Brackets</p>
@@ -270,31 +275,31 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="10"></td>
-                                        <td><input type="number" min="0" step="0.01" value="22000"></td>
+                                        <td><input type="number" min="0" step="1" value="10"></td>
+                                        <td><input type="number" min="0" step="1" value="23200"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="12"></td>
-                                        <td><input type="number" min="0" step="0.01" value="89450"></td>
+                                        <td><input type="number" min="0" step="1" value="12"></td>
+                                        <td><input type="number" min="0" step="1" value="94300"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="22"></td>
-                                        <td><input type="number" min="0" step="0.01" value="190750"></td>
+                                        <td><input type="number" min="0" step="1" value="22"></td>
+                                        <td><input type="number" min="0" step="1" value="201050"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="24"></td>
-                                        <td><input type="number" min="0" step="0.01" value="364200"></td>
+                                        <td><input type="number" min="0" step="1" value="24"></td>
+                                        <td><input type="number" min="0" step="1" value="383900"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="32"></td>
-                                        <td><input type="number" min="0" step="0.01" value="462500"></td>
+                                        <td><input type="number" min="0" step="1" value="32"></td>
+                                        <td><input type="number" min="0" step="1" value="487450"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="35"></td>
-                                        <td><input type="number" min="0" step="0.01" value="693750"></td>
+                                        <td><input type="number" min="0" step="1" value="35"></td>
+                                        <td><input type="number" min="0" step="1" value="731200"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="37"></td>
+                                        <td><input type="number" min="0" step="1" value="37"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -468,11 +473,11 @@
         }
 
         for (var year = 1; year <= withdrawTime; ++year) {
-            var withdrawValue = contributionValue - (withdraw * 12 * year);
+            // var withdrawValue = contributionValue - (withdraw * 12 * year);
             futureValue = monthlyCompoundInterest(futureValue, endingInterestRate, -withdraw);
 
             futureValueData.push(futureValue);
-            contributionData.push(withdrawValue);
+            contributionData.push(contributionValue);
             yearsData.push(year + contributionTime);
 
             if (extraChoice == "1") {
@@ -691,16 +696,6 @@
         else if (src.value == "1") {
             extra401KSection.hidden = false;
             incomeInput.required = true;
-
-            const incomeIncreaseSection = document.getElementById("incomeIncreaseSection");
-            const incomeIncrease = document.getElementById("incomeIncrease");
-
-            if (src.value == "0") {
-                incomeIncreaseSection.hidden = true;
-            }
-            else {
-                incomeIncreaseSection.hidden = false;
-            }
         }
     }
 
@@ -756,11 +751,12 @@
 
     </div>
     <footer class="text-center footer mt-auto">
-        <div class="py-2">&copy; 2023 by Collin Moon</div>
+        <div class="py-2">&copy; 2024 by Collin Moon</div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 </html>
