--- a/investment_calculator.html
+++ b/investment_calculator.html
@@ -889,7 +889,12 @@
             if (global_info.data.ages[year] < global_info.retirement_age.value) {
                 income = global_info.income.value * Math.pow(1 + global_info.inflation.value / 100, year);
             }
-            return Math.max(0, (income + withdrawals) - TaxStrategy.tax(year, ...all_income_sources));
+            return Math.max(0, (income + withdrawals)
+                   - TaxStrategy.tax(year, ...all_income_sources))
+                   - TaxStrategy._401K_contributions(year)
+                   - TaxStrategy.ira_contributions(year)
+                   - TaxStrategy.hsa_contributions(year)
+                   - TaxStrategy.section125.value * (global_info.data.ages[year] < global_info.retirement_age.value);
         }
         
         static federal_marginal_bracket(year = 0) {
