--- a/the_power_of_retirement_accounts.html
+++ b/the_power_of_retirement_accounts.html
@@ -765,7 +765,7 @@
     </table>
     <h3>Conclusion</h3>
     <p>
-        An optimized strategy consisting of a 401K, Roth IRA, and Taxable accounts give anywhere between zero to five years of extra years in retirement. The average
+        An optimized strategy consisting of a 401K, Roth IRA, and Taxable accounts gives anywhere between zero to five years of extra retirement. The average
         simulation gains an additional year compared to a strategy using only the Taxable account. Although there are retirement accounts in the United States
         that allow investors to invest with tax incentives, these incentives are not powerful enough to noticeably decrease the age one retires.
     </p>
