Can now save 401K Tax Bracket Withdrawal

--- a/investment_calculator.html
+++ b/investment_calculator.html
@@ -2668,6 +2668,7 @@
                     break;
                 case 2:
                     this.maxWithdrawal.set_value(obj.withdrawal);
+                    break;
             }
         }
 
@@ -2766,7 +2767,9 @@
                     this.withdrawalChoice.set_value(e.target.value);
                 });
             }
-            choices[this.withdrawalChoice.value].checked = true;
+            if (this.withdrawalChoice.value <= 2) {
+                choices[this.withdrawalChoice.value].checked = true;
+            }
 
             const withdrawalInput = this.generate_input_template(
                 "Monthly Withdrawal",
@@ -3106,6 +3109,11 @@
             else {
                 obj.roth_account = this.roth_account.id;
             }
+            switch (obj.withdrawalChoice) {
+                case 3:
+                    obj.withdrawal = this.withdrawalTaxBracket.value;
+                    break;
+            }
 
             return obj;
         }
@@ -3114,6 +3122,11 @@
             super.deserialize(obj);
             this.roth_converting.set_value(obj.roth_converting);
             this.roth_account = obj.translate_account(obj.roth_account);
+            switch (this.withdrawalChoice.value) {
+                case 3:
+                    this.withdrawalTaxBracket.set_value(obj.withdrawal);
+                    break;
+            }
         }
 
         get_withdrawal_template() {
@@ -3301,7 +3314,6 @@
                 while (true) {
                     const fed_taxable = TaxStrategy.fed_taxable(idx, this) + previous_ss_calc;
                     const old_margin = TaxStrategy.federal_marginal_bracket(idx);
-                    const new_ss_calc = TaxStrategy.ss_taxable(idx);
                     let current_fed_table = Tax.get_fed_special_tax();
                     if (current_fed_table == null) {
                         amount = expense;
